# HSEcloud

./: CMakeLists.txt  README.md  index.html  main.cpp  sendfiles.html  website.html
Doc/: Doxyfile
Doc/html/: files.html  globals.html  globals_func.html  index.html  main_8cpp.html
Doc/html/search/: all_0.js  all_4.js  all_5.js  all_8.js  all_9.js  functions_1.js  functions_2.js  functions_3.js  functions_7.js  searchdata.js
Doc/latex/: files.tex  main_8cpp.tex  refman.tex
Tests/: CMakeLists.txt  functions.cpp  functions.h  test_CurrentDir.cpp  test_LogMessage.cpp
